Fix hang when copying Maven dependencies in Docker